alignment issues in mobile view resolved

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@
   background-color: black !important;
 }
 
-@media screen and (min-width:360px) and (max-width:600px) {
+@media screen and (min-width:330px) and (max-width:600px) {
   .result-detailsbox-width{
       width: 200px;
   }
@@ -79,6 +79,10 @@
   }
   .padding{
     padding-top: 0px !important;
+  }
+
+  .toast-message{
+    width: auto;
   }
 }
 
@@ -89,5 +93,8 @@
       .questions-section{
         width: 250px;
         margin-left: 0px !important;
+    }
+    .toast-message{
+      width: auto;
     }
   }
